<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.CategoriesFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorBlackScrim"
                app:layout_anchorGravity="top"
                app:layout_scrollFlags="scroll|enterAlways|snap">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:id="@+id/imageView2"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:contentDescription="@string/app_name"
                   android:scaleType="centerCrop"
                   android:src="@drawable/food_bg"
                   app:layout_collapseMode="parallax"
                   app:layout_scrollFlags="scroll|enterAlways|snap"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <ImageView
                   android:id="@+id/mask"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@drawable/ic_bgnd_mask"
                   android:scaleType="centerCrop"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <ImageView
                   android:id="@+id/category_chooser"
                   android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:layout_marginEnd="20dp"
                   android:layout_marginBottom="24dp"
                   android:contentDescription="@string/list_all_food_categories"
                   app:layout_scrollFlags="scroll|enterAlways|snap"
                   android:src="@drawable/ic_category_chooser"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent" />

               <ImageView
                   android:id="@+id/back_icon"
                   android:layout_width="@dimen/margin_40dp"
                   android:layout_height="@dimen/margin_40dp"
                   android:contentDescription="@string/move_back_to_home_fragment"
                   android:layout_marginStart="20dp"
                   android:src="@drawable/ic_icon_back_circled"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="0.31" />

               <TextView
                   android:id="@+id/category_name"
                   style="@style/TextAppearance.TitleWhite"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="24dp"
                   android:text="@string/all_categories"
                   app:layout_collapseMode="parallax"
                   app:layout_constraintBottom_toBottomOf="@+id/back_icon"
                   app:layout_constraintStart_toEndOf="@+id/back_icon"
                   app:layout_constraintTop_toTopOf="@+id/back_icon"
                   app:layout_scrollFlags="scroll|enterAlways" />

           </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

       </androidx.core.widget.NestedScrollView>

        <include layout="@layout/categories_bottom_sheet"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>